@@ -2,8 +2,7 @@
 <div class="pfg-embedded">
     <tal:block metal:use-macro="context/global_statusmessage/macros/portal_message"/>
     <tal:block
-        tal:define="pfg_embedded_action request/other/pfg_form_action|request/URL;
-                    errors options/state/getErrors | nothing;
+        tal:define="errors options/state/getErrors | nothing;
                     fieldsets python:['default'];
                     default_fieldset string:default;
                     fieldset default_fieldset;
