@@ -1,5 +1,7 @@
 1.3.0 (beta)
 
+ - Added 'force SSL' option for form folders. (David Glick)
+
  - Removed validator from the form action override field. This allows
    relative urls in the override. (Michael Dunlap)
 
